android: better drawing UI and erasing (#478)
* some setup

* much better erasing

* initial drawing ui

* some more layout handling

* layed out colors and erase mode

* fully working with colors and erase, no sizes yet

* fixed color issue with new theming

* switching to pen and erase buttons

* working sizes and modes

* able to make tools disappear with tap, has fullscreen, and correctly working buttons

* android fmt

* changed the layout and button selection theme, fixed theming issues

* made tapping on and off the toolbar better, and made selected tools survive configuration changes

* added smooth fade in and fade out for the drawing toolbar

--- a/clients/android/app/src/main/AndroidManifest.xml
+++ b/clients/android/app/src/main/AndroidManifest.xml
@@ -21,11 +21,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/DarkBlue">
+        android:theme="@style/Main">
         <activity
             android:name=".screen.InitialLaunchFigureOuter"
             android:noHistory="true"
-            android:theme="@style/DarkBlue.NoActionBar">
+            android:theme="@style/Main.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -33,16 +33,16 @@
         </activity>
         <activity
             android:name=".screen.WelcomeActivity"
-            android:theme="@style/DarkBlue.NoActionBar" />
+            android:theme="@style/Main.NoActionBar" />
         <activity
             android:name=".screen.NewAccountActivity"
-            android:theme="@style/DarkBlue.NoActionBar" />
+            android:theme="@style/Main.NoActionBar" />
         <activity
             android:name=".screen.ImportAccountActivity"
-            android:theme="@style/DarkBlue.NoActionBar" />
+            android:theme="@style/Main.NoActionBar" />
         <activity
             android:name=".screen.HandwritingEditorActivity"
-            android:theme="@style/DarkBlue.NoActionBar" />
+            android:theme="@style/Main.FullScreen" />
         <activity android:name=".screen.ListFilesActivity" />
         <activity android:name=".screen.SettingsActivity" />
         <activity android:name=".screen.TextEditorActivity" />
