--- a/containers/docker-compose-integration-tests.yml
+++ b/containers/docker-compose-integration-tests.yml
@@ -112,7 +112,7 @@ services:
     entrypoint: >
       /bin/sh -c '\
         sleep 5 && \
-        ./gradlew test \
+        gradle test \
       '
 
   performance_bench:
