removed unused integration tests dockerfile

--- a/containers/Dockerfile.core
+++ b/containers/Dockerfile.core
@@ -35,7 +35,7 @@ FROM core:${HASH} AS core-lint
 RUN cargo +stable clippy -- -D warnings -A clippy::redundant-field-names -A clippy::missing-safety-doc -A clippy::expect-fun-call -A clippy::too-many-arguments
 
 # Set up for integration tests
-FROM core:${HASH} AS integration-tests
+FROM core:${HASH} AS core-server-tests
 ENV API_URL=http://lockbook_server:8000
 RUN touch src/lib.rs
 RUN cargo build --release
