infra: only run integration tests in the core-server-db step (#579)
* only integration tests run

* unused import in test

* got rid of color flag

* deleted core test step

* removed bits from old core_test

* removed unused integration tests dockerfile

--- a/containers/docker-compose-integration-tests.yml
+++ b/containers/docker-compose-integration-tests.yml
@@ -50,9 +50,9 @@ services:
         RUST_LOG=lockbook_server=debug ./target/release/lockbook-server \
       '
 
-  integration_tests:
-    container_name: integration_tests-integration-$HASH
-    image: integration_tests:$HASH
+  core_server_tests:
+    container_name: core_server_tests-integration-$HASH
+    image: core_server_tests:$HASH
     env_file:
       - ../containers/test.env
     depends_on:
