added back compile step since the test time increased significantly

--- a/containers/Dockerfile.kotlin_interface_tests
+++ b/containers/Dockerfile.kotlin_interface_tests
@@ -22,3 +22,6 @@ ENV API_URL=http://lockbook_server:8000
 RUN mkdir -p /clients/android/core/src/main/jniLibs/desktop
 WORKDIR /clients/android
 COPY --from=core-build /core/target/release/liblockbook_core.so /clients/android/core/src/main/jniLibs/desktop/liblockbook_core.so
+
+# Build android
+RUN gradle compileDebugUnitTestSources
