--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -25,7 +25,7 @@ image = "0.23.13"
 jni = { version = "0.13.1", default-features = false }
 log = "0.4.8"
 rand = "0.7"
-raqote = "0.8.0"
+raqote = { version = "0.8.0", default-features = false }
 reqwest = { version = "0.10.6", default-features = false, features = ["rustls-tls", "blocking", "json"] }
 rsa = { version = "^0.2", features = ["serde1"] }
 serde = { version = "1.0", features = ["derive"] }
