core: drawing support (#603)
* some basic structs and service

* exposed api and seemingly working

* created new function in drawing service to get drawing data

* deleted comment

* new endpoint in cli, runs does not work

* image is successfully created though not correct

* successfully exports to png

* supports multiple image formats and has better error handeling

* some opimizations with strings and error handeling

* working color

* able to optionally use a directory to export the drawing to

* able to either get bytes or directly output it into a file

* better handled errors and renamed drawing field

* fulling working endpoints in core

* fixed lint problems

* added new dependencies for swift tests so it builds correctly

* got rid of raqote text feature

* core successfully switched to exporting bytes for drawings

* working dynamic size

* got rid of tests code, added errors and matched succesfully on them

* optimizations and some fixes

* got rid of hdr format

* successfully switched core to new format

* default theme works

* got rid of bug where drawing misses the last few points

* drawing accounts for boldness

* should be working now

* updated message

* bumped cli version and fixed formatting

* cleaned up get_drawing_bounds

* added tests

Co-authored-by: Parth <parth@mehrotra.me>

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -26,9 +26,11 @@ chrono = "0.4.15"
 diffy = "0.2.0"
 fern = { version = "0.6.0", features = ["colored"]}
 flate2 = "1.0"
+image = "0.23.13" 
 jni = { version = "0.13.1", default-features = false }
 log = "0.4.8"
 rand = "0.7"
+raqote = { version = "0.8.0", default-features = false }
 reqwest = { version = "0.11.1", default-features = false, features = ["blocking", "json"] }
 rsa = { version = "^0.2", features = ["serde1"] }
 serde = { version = "1.0", features = ["derive"] }
