--- a/clients/cli/Cargo.toml
+++ b/clients/cli/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 
 [dependencies]
 lockbook-core = { path = "../../core" }
+lockbook-models = { path = "../../core/libs/models" }
 structopt = "0.3.13"
 uuid = "0.8"
 serde_json = "1.0.44"
