--- a/containers/Dockerfile.server
+++ b/containers/Dockerfile.server
@@ -10,10 +10,13 @@ WORKDIR server
 # Server depends on core via a relative import
 COPY core/Cargo.toml /core/Cargo.toml
 COPY core/Cargo.lock /core/Cargo.lock
+COPY core/libs/models/Cargo.toml /core/libs/models/Cargo.toml
+COPY core/libs/models/Cargo.lock /core/libs/models/Cargo.lock
 
 # Required to get cargo to get and compile deps but not our source
 # https://blog.mgattozzi.dev/caching-rust-docker-builds/
 COPY containers/dummy.rs /core/src/lib.rs
+COPY containers/dummy.rs /core/libs/models/src/lib.rs
 
 COPY containers/dummy.rs src/main.rs
 COPY server/Cargo.toml .
@@ -30,6 +33,7 @@ COPY core /core
 # Cargo thinks this file hasn't changed on the filesystem
 RUN touch src/main.rs
 RUN touch /core/src/lib.rs
+RUN touch /core/libs/models/src/lib.rs
 RUN cargo build --release
 
 # Check formatting
