--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -16,6 +16,9 @@ default = ["rustls-tls"]
 rustls-tls = ["reqwest/rustls-tls"]
 native-tls = ["reqwest/native-tls"]
 
+[dependencies.lockbook-models]
+path = "libs/models"
+
 [dependencies]
 aead = "0.2.0"
 aes-gcm = "0.5.0"
