Moving crypto to sub crate and depending on it

--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,7 @@ clients/apple/libs/
 
 core/target/
 core/libs/models/target/
+core/libs/crypto/target/
 clients/cli/target/
 core/lockbook_core.h
 
