core: Modularize that bad boy (#674)
* Idiomatic naming of lockbook-core instead of lockbook_core

* Moving models to sub crate and depending on it

* Moving crypto to sub crate and depending on it

--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,8 @@ clients/apple/include/
 clients/apple/libs/
 
 core/target/
+core/libs/models/target/
+core/libs/crypto/target/
 clients/cli/target/
 core/lockbook_core.h
 
