--- a/clients/linux/Cargo.toml
+++ b/clients/linux/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2018"
 
 [dependencies]
 fuzzy-matcher = "*"
-lockbook_core = { path = "../../core" }
+lockbook-core = { path = "../../core" }
+lockbook-models = { path = "../../core/libs/models" }
 gdk = "0.13.2"
 gdk-pixbuf = "0.9.0"
 glib = "0.10"
