--- a/containers/Dockerfile.cli
+++ b/containers/Dockerfile.cli
@@ -11,6 +11,14 @@ COPY core/Cargo.toml /core/Cargo.toml
 COPY core/Cargo.lock /core/Cargo.lock
 COPY containers/dummy.rs /core/src/lib.rs
 
+COPY containers/dummy.rs /core/libs/models/src/lib.rs
+COPY core/libs/models/Cargo.toml /core/libs/models/Cargo.toml
+COPY core/libs/models/Cargo.lock /core/libs/models/Cargo.lock
+COPY containers/dummy.rs /core/libs/crypto/src/lib.rs
+COPY core/libs/crypto/Cargo.toml /core/libs/crypto/Cargo.toml
+COPY core/libs/crypto/Cargo.lock /core/libs/crypto/Cargo.lock
+
+
 # Required to get cargo to get and compile deps but not our source
 # https://blog.mgattozzi.dev/caching-rust-docker-builds/
 COPY containers/dummy.rs /clients/cli/src/main.rs
@@ -26,6 +34,8 @@ COPY core /core
 # Cargo thinks this file hasn't changed on the filesystem
 RUN touch /clients/cli/src/main.rs
 RUN touch /core/src/lib.rs
+RUN touch /core/libs/models/src/lib.rs
+RUN touch /core/libs/crypto/src/lib.rs
 RUN cargo build --release
 
 # Check formatting
