--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "lockbook_core"
-version = "0.1.2"
+name = "lockbook-core"
+version = "0.1.3"
 authors = ["Parth <parth@mehrotra.me>", "Raayan <raayan@raayanpillai.com>", "Travis <t.vanderstad@gmail.com>", "Smail <smailbarkouch1@gmail.com>"]
 edition = "2018"
 description = "The functional components of the iOS and Android lockbook clients."
@@ -16,9 +16,13 @@ default = ["rustls-tls"]
 rustls-tls = ["reqwest/rustls-tls"]
 native-tls = ["reqwest/native-tls"]
 
+[dependencies.lockbook-models]
+path = "libs/models"
+
+[dependencies.lockbook-crypto]
+path = "libs/crypto"
+
 [dependencies]
-aead = "0.2.0"
-aes-gcm = "0.5.0"
 base64 = "0.11.0"
 basic-human-duration = "0.1.2"
 bincode = "1.2.1"
