logging build in startup so we can use logs to tell which server is running and restructring some params

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,8 @@ jobs:
       working-directory: server
       run: |
         echo $PATH
-        cargo build --release
+        echo Building $HASH
+        SERVER_BUILD=$HASH cargo build --release
     - name: Archive Build
       uses: actions/upload-artifact@v2
       with:
