server: PagerDuty Change on startup and Alert on error! (#678)
* Idiomatic naming of lockbook-core instead of lockbook_core

* Moving models to sub crate and depending on it

* Moving crypto to sub crate and depending on it

* Removing vestigial version check thing in server

* Basic functionality for notifying PagerDuty of something

* File and line deduping as well as proper PD alert triggering

* logging build in startup so we can use logs to tell which server is running and restructring some params

* Changing pagerduty-rs from local modified to forked repo

* Removing panic in tokio task spawning

* printing when pagerdutying fails

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,11 +8,13 @@ edition = "2018"
 base64 = "0.11.0"
 chrono = "0.4.15"
 fern = { version = "0.6.0", features = ["colored"]}
+futures = "0.3.13"
 hyper = "0.13.5"
 lockbook-crypto = { path = "../core/libs/crypto" }
 lockbook-models = { path = "../core/libs/models" }
 log = "0.4.8"
 openssl = { version = "0.10", features = ["vendored"] }
+pagerduty-rs = { git = "https://github.com/raayan/pagerduty-rs.git", branch = "raayan/lower_reqwests" }
 postgres-openssl = "0.3.0"
 rsa = { version = "^0.2", features = ["serde1"] }
 rust-s3 = { version = "0.22.3", features = ["path-style"] }
