--- a/containers/Dockerfile.cli
+++ b/containers/Dockerfile.cli
@@ -44,7 +44,7 @@ RUN cargo +stable fmt -- --check -l
 
 # Check lint
 FROM cli:${HASH} AS cli-lint
-RUN cargo +stable clippy -- -D warnings -A clippy::redundant-field-names -A clippy::ptr-arg -A clippy::missing-safety-doc -A clippy::expect-fun-call -A clippy::too-many-arguments
+RUN cargo +stable clippy -- -D warnings -A clippy::redundant-field-names -A clippy::ptr-arg -A clippy::missing-safety-doc -A clippy::expect-fun-call -A clippy::too-many-arguments -A clippy::upper-case-acronyms -A clippy::suspicious-operation-groupings
 
 # Run cli tests
 FROM cli:${HASH} AS cli-test
