fixed server lint errors

--- a/containers/Dockerfile.server
+++ b/containers/Dockerfile.server
@@ -46,4 +46,4 @@ RUN cargo +stable fmt -- --check -l
 
 # Check lint
 FROM server:${HASH} AS server-lint
-RUN cargo +stable clippy -- -D warnings -A clippy::redundant-field-names -A clippy::ptr-arg -A clippy::missing-safety-doc -A clippy::expect-fun-call -A clippy::too-many-arguments
+RUN cargo +stable clippy -- -D warnings -A clippy::redundant-field-names -A clippy::ptr-arg -A clippy::missing-safety-doc -A clippy::expect-fun-call -A clippy::too-many-arguments -A clippy::upper-case-acronyms
