--- a/dev_utils/build-lockbook-debian/ppa-lockbook/debian/rules
+++ b/dev_utils/build-lockbook-debian/ppa-lockbook/debian/rules
@@ -6,13 +6,11 @@ clean:
 
 build:
 	dh build
-	
-	git clone https://github.com/lockbook/lockbook.git
-	cargo build --release --locked --manifest-path lockbook/clients/cli/Cargo.toml
+	cargo build --release --locked --manifest-path ../../../clients/cli/Cargo.toml
 
 binary:
 	mkdir -p debian/lockbook/usr/bin
-	mv lockbook/clients/cli/target/release/lockbook debian/lockbook/usr/bin
+	mv ../../../clients/cli/target/release/lockbook debian/lockbook/usr/bin
 	
 	strip --strip-all debian/lockbook/usr/bin/lockbook
 	dh_gencontrol
