--- a/.gitignore
+++ b/.gitignore
@@ -84,7 +84,7 @@ core/libs/crypto/target/
 clients/cli/target/
 core/lockbook_core.h
 
-server/target/
+server/server/target/
 server/**/*.rs.bk
 server/ca-certificate.crt
 server/qa-ca-certificate.crt
