--- a/.gitignore
+++ b/.gitignore
@@ -84,10 +84,11 @@ core/libs/crypto/target/
 clients/cli/target/
 core/lockbook_core.h
 
+server/admin/target/
 server/server/target/
-server/**/*.rs.bk
-server/ca-certificate.crt
-server/qa-ca-certificate.crt
+server/server/**/*.rs.bk
+server/server/ca-certificate.crt
+server/server/qa-ca-certificate.crt
 .idea/
 *.iml
 clients/linux/target
@@ -95,7 +96,7 @@ integration_tests/target/
 containers/qa.env
 containers/prod.env
 containers/devtest.env
-server/qa-ca-certificate.crt
+server/server/qa-ca-certificate.crt
 clients/android/core/src/main/jniLibs/
 liblockbook_core.a
 lockbook_core.h
