--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -10,8 +10,8 @@ chrono = "0.4.15"
 fern = { version = "0.6.0", features = ["colored"]}
 futures = "0.3.13"
 hyper = "0.13.5"
-lockbook-crypto = { path = "../core/libs/crypto" }
-lockbook-models = { path = "../core/libs/models" }
+lockbook-crypto = { path = "../../core/libs/crypto" }
+lockbook-models = { path = "../../core/libs/models" }
 log = "0.4.8"
 openssl = { version = "0.10", features = ["vendored"] }
 pagerduty-rs = { git = "https://github.com/raayan/pagerduty-rs.git", branch = "raayan/lower_reqwests" }
