--- a/server/instances/prometheus/prometheus.yml
+++ b/server/instances/prometheus/prometheus.yml
@@ -13,7 +13,7 @@ scrape_configs:
       - targets:
           - 'localhost:9090'
           - 'localhost:9100'
-#  - job_name: 'api'
-#    static_configs:
-#      - targets:
-#          - '10.136.34.178:9100'
+  - job_name: 'load-balancer'
+    static_configs:
+      - targets:
+          - '172.31.43.245:9100'
