--- a/server/instances/haproxy/load-balancer.haproxy.cfg
+++ b/server/instances/haproxy/load-balancer.haproxy.cfg
@@ -39,10 +39,10 @@ defaults
 # Main frontend
 frontend grafana_frontend
 	bind *:80
-	## Uncomment this after you've certbotted!
-	#bind *:443 ssl crt /etc/ssl/api.prod.lockbook.net/api.prod.lockbook.net.pem
-	## Force HTTPS
-	#redirect scheme https code 301 if !{ ssl_fc }
+	# Uncomment this after you've certbotted!
+	bind *:443 ssl crt /etc/ssl/api.prod.lockbook.net/api.prod.lockbook.net.pem
+	# Force HTTPS
+	redirect scheme https code 301 if !{ ssl_fc }
 
 	# LetsEncrypt stuff
 	acl letsencrypt_acl path_beg /.well-known/acme-challenge/
