--- a/server/instances/loki/promtail.yml
+++ b/server/instances/loki/promtail.yml
@@ -6,7 +6,7 @@ positions:
   filename: /tmp/positions.yaml
 
 clients:
-  - url: http://10.136.34.175:3100/loki/api/v1/push
+  - url: http://172.31.37.165:3100/loki/api/v1/push # metrics.lockbook.net internal IP
 
 scrape_configs:
 - job_name: system
@@ -14,5 +14,6 @@ scrape_configs:
   - targets:
       - localhost
     labels:
-      job: prod 
+      job: lockbook-server
+      instance: <HOSTNAME>
       __path__: /var/log/lockbook_server.log
