--- a/containers/docker-compose-integration-tests.yml
+++ b/containers/docker-compose-integration-tests.yml
@@ -2,11 +2,13 @@ version: '3'
 
 services:
   filesdb:
+    network_mode: host
     image: minio/minio:RELEASE.2020-05-16T01-33-21Z
     env_file:
       - ../containers/test.env
     entrypoint: /bin/sh -c 'MINIO_REGION_NAME=$$FILES_DB_REGION /usr/bin/minio server /data'
   config_filesdb:
+    network_mode: host
     image: minio/mc:RELEASE.2020-05-16T01-44-37Z
     env_file:
       - ../containers/test.env
@@ -21,10 +23,12 @@ services:
         tail -f /dev/null
       '
   indexdb:
+    network_mode: host
     image: postgres:12.3
     environment:
       - POSTGRES_HOST_AUTH_METHOD=trust
   config_indexdb:
+    network_mode: host
     image: db_with_migration-$HASH
     container_name: config_indexdb-integration-$HASH
     env_file:
