--- a/containers/test.env
+++ b/containers/test.env
@@ -1,4 +1,4 @@
-INDEX_DB_HOST=localhost
+INDEX_DB_HOST=indexdb
 INDEX_DB_PORT=5432
 INDEX_DB_DB=postgres
 INDEX_DB_USER=postgres
@@ -6,14 +6,14 @@ INDEX_DB_PASS=
 INDEX_DB_CERT=
 
 FILES_DB_SCHEME=http
-FILES_DB_HOST=localhost
+FILES_DB_HOST=filesdb
 FILES_DB_PORT=9000
 FILES_DB_REGION=universe
 FILES_DB_BUCKET=testbucket
 FILES_DB_ACCESS_KEY=minioadmin
 FILES_DB_SECRET_KEY=minioadmin
 
-API_URL=http://localhost:8000
+API_URL=http://lockbook_server:8000
 SERVER_SCHEME=http
 SERVER_HOST=lockbook_server
 SERVER_PORT=8000
