fix server dockerfile

--- a/containers/Dockerfile.server
+++ b/containers/Dockerfile.server
@@ -22,6 +22,7 @@ COPY containers/dummy.rs /core/libs/models/src/lib.rs
 COPY containers/dummy.rs /core/libs/crypto/src/lib.rs
 
 COPY containers/dummy.rs src/main.rs
+COPY containers/dummy.rs src/lib.rs
 COPY server/server/Cargo.toml .
 COPY server/server/Cargo.lock .
 
