infra: admin cli (#710)
* created a server folder

* re-org a bit

* WIP commit

* ignoring all target folders

* dev utils to utils/dev

* more improved deploy util scripts

* more updates

* admin-cli structure

* get-root impl'd and tested

* delete user done

* undo env file change

* undo docker-compose change

* fix server dockerfile

* move prom script, add to fmt_all and fmt

* fix access keys

* test instead of build to warm up dev deps

* test instead of build to warm up dev deps

* working automatic builds, fmt, and lint

* clippy

* Admin-Cli -> Admin

* more clippy

* Update server/admin/src/main.rs

Co-authored-by: raayan <raayan@raayanpillai.com>
Co-authored-by: Smail Barkouch <smailbarkouch1@gmail.com>

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -77,6 +77,19 @@ jobs:
         run: make server_fmt
       - name: Lint
         run: make server_lint
+  
+  Admin:
+    runs-on: [self-hosted, dockerized]
+    env:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build admin cli container
+        run: make admin_cli
+      - name: Check Formatting
+        run: make admin_cli_fmt
+      - name: Lint
+        run: make admin_cli_lint
 
   Prep-Core-Server-Db:
     runs-on: [self-hosted, dockerized]
