--- a/.gitignore
+++ b/.gitignore
@@ -78,26 +78,26 @@ iOSInjectionProject/
 clients/apple/include/
 clients/apple/libs/
 
-core/target/
-core/libs/models/target/
-core/libs/crypto/target/
-clients/cli/target/
+**/target/
+
 core/lockbook_core.h
 
-server/target/
-server/**/*.rs.bk
-server/ca-certificate.crt
-server/qa-ca-certificate.crt
+server/server/**/*.rs.bk
+server/server/ca-certificate.crt
+server/server/qa-ca-certificate.crt
 .idea/
 *.iml
-clients/linux/target
-integration_tests/target/
 containers/qa.env
 containers/prod.env
 containers/devtest.env
-server/qa-ca-certificate.crt
+server/server/qa-ca-certificate.crt
 clients/android/core/src/main/jniLibs/
 liblockbook_core.a
 lockbook_core.h
 *.log
 lockbook_core.dll
+
+*.pem
+*.crt
+lockbook-server.prod
+lockbook-server
