--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -4,14 +4,22 @@ version = "0.1.1"
 authors = ["Parth <parth@mehrotra.me>"]
 edition = "2018"
 
+[lib]
+name = "lockbook_server_lib"
+path = "src/lib.rs"
+
+[[bin]]
+name = "lockbook-server"
+path = "src/main.rs"
+
 [dependencies]
 base64 = "0.11.0"
 chrono = "0.4.15"
 fern = { version = "0.6.0", features = ["colored"]}
 futures = "0.3.13"
 hyper = "0.13.5"
-lockbook-crypto = { path = "../core/libs/crypto" }
-lockbook-models = { path = "../core/libs/models" }
+lockbook-crypto = { path = "../../core/libs/crypto" }
+lockbook-models = { path = "../../core/libs/models" }
 log = "0.4.8"
 openssl = { version = "0.10", features = ["vendored"] }
 pagerduty-rs = { git = "https://github.com/raayan/pagerduty-rs.git", branch = "raayan/lower_reqwests" }
@@ -24,3 +32,6 @@ tokio = { version = "0.2.18", features = ["full"] }
 tokio-postgres = { version = "0.5.4", features = ["with-chrono-0_4"] }
 tokio-test = "0.2.1"
 uuid = { version = "0.8.1", features = ["v4", "serde"] }
+
+[dev-dependencies]
+lockbook-core = { path = "../../core" }
